package com.directi.training.lsp.exercise_refractored;

public class NormalDuck extends Duck {
    public NormalDuck(){
        this._on = true;
    }
}
